--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,16 @@
       content="Допомагаємо громадянам України, які перебувають у Європі, швидко та законно отримати водійські права в Узбекистані. Повний супровід, проживання, переклади, навчання та підтримка — усе під ключ за 2500€."
     />
     <meta name="keywords" content="водійські права, права за кордоном, отримати права Узбекистан, українці в ЄС, легальні права, навчання водіїв, допомога з правами, проживання, супровід" />
-    <meta name="author" content="УзбекПрава" />
+    <meta name="author" content="UZdrive" />
     <meta name="language" content="uk" />
-    <meta property="og:title" content="УзбекПрава — водійські права під ключ за 2500€" />
-    <meta property="og:description" content="Допомога українцям у ЄС з отриманням водійських прав в Узбекистані. Житло, документи, навчання, підтримка — усе включено." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
+    <meta property="og:url" content="https://uzdrive.netlify.app/" />
+    <meta property="og:title" content="UZdrive — водійські права під ключ за 2500€" />
+    <meta property="og:description" content="Допомагаємо українцям у ЄС швидко та законно отримати водійські права в Узбекистані. Повний супровід, квитки, проживання, навчання." />
+    <meta property="og:image" content="%PUBLIC_URL%/preview.jpg" />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>УзбекПрава</title>
+    <title>UZdrive</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
